css/styles.css
/* ... */
.footer-row {
  display: flex;
  justify-content: space-between;
}
.footer-slogan {
  font-weight: 500;
  font-size: 28px;
  letter-spacing: -0.02em;
  max-width: 300px;
}
.footer-slogan .accent {
  color: var(--orange);
}
.row-1 {
  margin-bottom: 78px;
}
.row-2 {
  align-items: center;
  position: relative;
}

.row-2::before {
  content: "";
  position: absolute;
  width: 100%;
  border: 1px solid rgba(255, 255, 255, 0.1);
  top: -32px;
}
.navigation-list-footer {
  display: flex;
  gap: 24px;
}
.contacts-title {
  font-weight: 500;
  line-height: 1.29;
  margin-bottom: 14px;
}
.contacts-list {
  display: flex;
  flex-direction: column;
  gap: 4px;
}
.contacts-link {
  line-height: 1.29;
  letter-spacing: -0.02em;
}
.subscribe-form {
  display: flex;
  gap: 8px;
}
.subscribe-input {
  display: block;
  background-color: transparent;
  border: 1.5px solid rgba(255, 255, 255, 0.15);
  border-radius: 30px;
  padding: 14px 24px;
  width: 313px;
  outline: none;
  color: var(--white);
  font-size: 18px;
  letter-spacing: -0.02em;
  transition: border-color 500ms ease;
}
.subscribe-input:focus {
  border-color: var(--orange);
}
.subscribe-input::placeholder {
  color: rgba(255, 255, 255, 0.3);
}
.subscribe-btn {
  border-radius: 100px;
  border: none;
  padding: 16px 32px;
  width: 137px;
  height: 52px;
  background-color: var(--orange);
  font-weight: 600;
  color: var(--white);
  transition: background-color, color 500ms ease;
}
.subscribe-btn:hover,
.subscribe-btn:focus {
  background-color: var(--cream);
  color: var(--orange);
}

@media (max-width: 1199px) {
  .row-2 {
    display: flex;
    justify-content: space-between;
    gap: 32px;
    align-items: center;
  }
  .navigation-list-footer {
    align-items: center;
    gap: 16px;
  }
  .subscribe-input {
    font-size: 14px;
    width: 232px;
    height: 45px;
  }
  .subscribe-btn {
    width: 128px;
    height: 45px;
    padding: 14px 28px;
  }

  .footer-section .navigation-link {
    padding: 12px 0;
  }
}

@media (max-width: 767px) {
  .footer-section {
    padding: 32px 0;
  }

  .footer-row {
    flex-direction: column;
  }
  .footer-slogan {
    margin-bottom: 32px;
    font-size: 24px;
  }

  .row-1 {
    margin-bottom: 64px;
  }

  .row-2 {
    display: flex;
    flex-direction: column;
    align-items: start;
  }
  .navigation-list-footer {
    display: flex;
    flex-direction: column;
    align-items: start;
  }
  .subscribe-input {
    width: 207px;
    padding: 14px 18px;
  }
  .subscribe-btn {
    width: 120px;
    padding: 14px 24px;
  }
}
/* #endregion */

/* #region MODAL */
.modal-overlay,
.buynow-backdrop {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 999;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(46, 47, 66, 0.4);
  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
  backdrop-filter: blur(5px);
}

.modal-overlay.is-open,
.buynow-backdrop.is-open {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

body:has(.modal-overlay.is-open, .buynow-backdrop.is-open) {
  overflow: hidden;
}

.modal,
.buynow-modal {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 517px;
  height: auto;
  background-color: var(--body-white);
  border-radius: 15px;
  padding: 40px;
  max-height: 95vh;
  max-width: 95vw;
  overflow-y: auto;
  overflow-x: hidden;
}

.modal::-webkit-scrollbar,
.buynow-modal::-webkit-scrollbar {
  width: 4px;
}

.modal::-webkit-scrollbar-thumb,
.buynow-modal::-webkit-scrollbar-thumb {
  background: var(--orange);
  border-radius: 8px;
  border: 1px solid var(--orange);
}

.modal-close-btn,
.buynow-modal-close-btn {
  position: absolute;
  top: 24px;
  right: 24px;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: transparent;
  border: none;
  padding: 7px;
}

.modal-btn-icon {
  width: 14px;
  height: 14px;
  stroke: var(--black);
  transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.modal-btn-icon:hover,
.modal-btn-icon:focus {
  stroke: var(--orange);
}

.modal-title {
  font-weight: 600;
  font-size: 24px;
  line-height: 1.17;
  letter-spacing: -0.03em;
  text-transform: uppercase;
  margin-bottom: 40px;
}

.modal-title-acent {
  color: var(--orange);
}

.modal-form-content:not(:last-child) {
  margin-bottom: 18px;
}

.modal-label {
  letter-spacing: -0.02em;
  color: rgba(64, 64, 64, 0.3);
}

.modal-form-input {
  position: relative;
  margin-top: 8px;
}

.modal-input {
  border: 1.5px solid rgba(17, 17, 17, 0.05);
  border-radius: 8px;
  padding: 22px 24px 22px 57px;
  width: 100%;
  height: 68px;
  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.03);
  outline: transparent;
  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.modal-input:hover,
.modal-input:focus {
  border: 1.5px solid var(--orange);
}

.modal-input:hover + .modal-input-icon,
.modal-input:focus + .modal-input-icon {
  stroke: var(--orange);
}

.modal-input:active {
  border: 1.5px solid var(--orange);
}

.modal-input-icon {
  position: absolute;
  top: 50%;
  left: 24px;
  transform: translateY(-50%);
  stroke-width: 1.5px;
  stroke: var(--black);
  fill: none;
  transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1),
    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
  width: 24px;
  height: 24px;
}

.modal-input:hover + .modal-input-icon {
  stroke: var(--orange);
}

.modal-user-comment {
  border: 1.5px solid rgba(17, 17, 17, 0.05);
  border-radius: 8px;
  padding: 22px 24px;
  width: 100%;
  height: 137px;
  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.03);
  resize: none;
  outline: transparent;
  font-size: 13px;
  letter-spacing: -0.02em;
  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  margin-top: 8px;
}

.modal-user-comment:hover,
.modal-user-comment:focus {
  border: 1.5px solid var(--orange);
}
/* ... */

